Fixing spacing

--- a/client/src/CSS_files/Body.css
+++ b/client/src/CSS_files/Body.css
@@ -1,9 +1,62 @@
 .Body {
-    padding-top: 130px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 1vh;
+}
+
+.home-menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1vh;
+    margin-top: 20vh;
+}
+
+.Toolbox-Toggle-Button{
+    position: fixed;
+    bottom: 1vh;
+    left: 0;
+    z-index: 10;
+    border-radius: 50%;
+    background-color: cornflowerblue;
+    color: white;
+    padding: 10px;
+    margin: 2vh;
+}
+
+.injectionDiv{
+    z-index: 2;
+}
+
+.OTP-container{
+    margin: 1vh;
+}
+
+.display-blocks {
+    position: flex;
+    z-index: -1;
+    padding-left: 1vh;
+    padding-right: 1vh;
+}
+
+.centered{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.vertical-margin {
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+}
+
+.horizontal-margin {
+    margin-left: 1vh;
+    margin-right: 1vh;
 }
 
 .Body2 {
@@ -12,12 +65,6 @@
     justify-content: center;
     align-items: center;
 }
-
-/* .BackTopLeft {
-    padding-top: 130px;
-    display: flex;
-    justify-content: left;
-} */
 
 .BodyTable {
     display: flex;
@@ -57,51 +104,6 @@
     align-items: center;
 }
 
-.centered{
-    z-index: -1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 .Text-Edit-Title{
     font-size: large;
-}
-
-.Toolbox-Toggle-Button{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: 10;
-    border-radius: 50%;
-    background-color: cornflowerblue;
-    color: white;
-    padding: 10px;
-    margin: 1vh;
-}
-
-.injectionDiv{
-    z-index: 2;
-}
-
-.OTP-container{
-    margin: 1vh;
-}
-
-.display-blocks {
-    position: flex;
-    z-index: -1;
-    padding-left: 1vh;
-    padding-right: 1vh;
-}
-
-.vertical-margin {
-    margin-top: 1vh;
-    margin-bottom: 1vh;
-}
-
-.horizontal-margin {
-    margin-left: 1vh;
-    margin-right: 1vh;
 }
